--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 </head>
 <body>
-
+    <img src="img/dog1.png"  class="img1"/>
+    <img src="img/dog2.png"  class="img2"/>
+    <img src="img/dog3.jpg"  class="img3"/>
+  
 
 </body>
 </html>
