commit update text

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-    <h2>Qual é a cor do primeiro cachorro?</h2>
-    <h2>Qual é a cor do segundo cachorro?</h2>
-    <h2>Qual é a cor do terceiro cachorro?</h2>
+    <p>Qual é a cor do primeiro cachorro?</p>
+    <p>Qual é a cor do segundo cachorro?</p>
+    <p>Qual é a cor do terceiro cachorro?</p>
 </body>
 </html>
