--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 </head>
 <body>
+<p>
+	Verde <input type="radio" name="color1" /><br />
+	Branco <input type="radio" name="color2" /><br />
+	Azul <input type="radio" name="color1" />
+</p>
 
+<p>
+	Amarelo <input type="radio" name="color2" /><br />
+    Rosa <input type="radio" name="color2" /><br />
+	Preto <input type="radio" name="color2" />
+</p>
 
+<p>
+	Branco <input type="radio" name="color3" /><br />
+    Dourado <input type="radio" name="color3" /><br />
+	Cinza <input type="radio" name="color3" />
+</p>
 </body>
 </html>
