--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 </head>
 <body>
-
-
+    <button class="button">Enviar</button>
+    <button class="button">Enviar</button>
+    <button class="button">Enviar</button>
 </body>
 </html>
