--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
     
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1oO3QtBFBK0?start=26" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+    <script src="script.js" ></script> 
 </body>
 </html>
